--- a/src/tdc/FrontEndBundle/Resources/views/Default/index.html.twig
+++ b/src/tdc/FrontEndBundle/Resources/views/Default/index.html.twig
@@ -37,6 +37,11 @@
     <div id="popularVideos_hldr">
         <div class="contentBlurbTitle">Popular Videos</div>
     </div>
+
+    <div id="latestQuestions">
+        <div class="contentBlurbTitle">Latest Questions</div>
+
+    </div>
 {% endblock contentArea %}
 
 {% block javascript_post %}
