--- a/web/public/css/TDC1/registerLogin.css
+++ b/web/public/css/TDC1/registerLogin.css
@@ -1,24 +1,65 @@
-#registerHelp_hldr {
+#registerHelp_hldr,
+#loginHelp_hldr {
     display: inline-block;
-    background-color: rgb(210, 210, 210);
     width: 325px;
-    height: 450px
+    height: 435px;
+    border-radius:10px;
+    
+}
+#helpBlurb_pointer {
+    width:30px;
+    height:20px;
+    display:inline-block;
+    background-image:url('../../public/images/TDC1/helpBaloonPointer.png');
+    position:absolute;
+    top:407px;
+    left:858px;
+}
+#helpBlurb_hldr {
+    width: 250px;
+    height: 250px;
+    background-color: rgb(0, 102, 255);
+    border-radius: 48px;
+    color: rgb(240, 240, 240);
+    padding: 14px;
+    border: 2px solid rgb(0, 51, 128);
+    font-family: cursive;
+    font-size: 1.5em;
+    display: inline-block;
+    vertical-align: top;
+    margin-left: 30px;
+    box-shadow: 4px 4px 10px 0px rgb(100,100,100);
 }
 #registerForm_hldr,
 #loginForm_hldr {
     background-color: rgb(210, 210, 210);
     display: inline-block;
-    float: left;
     width: 500px;
     padding: 10px;
     padding-left: 80px;
     margin-right: 20px;
+    vertical-align:top;
+    border-radius:10px;
+
+    background: -moz-linear-gradient(top,  rgba(255,255,255,0.5) 0%, rgba(255,255,255,0) 100%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,0.5)), color-stop(100%,rgba(255,255,255,0)));
+    background: -webkit-linear-gradient(top,  rgba(255,255,255,0.5) 0%,rgba(255,255,255,0) 100%);
+    background: -o-linear-gradient(top,  rgba(255,255,255,0.5) 0%,rgba(255,255,255,0) 100%);
+    background: -ms-linear-gradient(top,  rgba(255,255,255,0.5) 0%,rgba(255,255,255,0) 100%);
+    background: linear-gradient(top,  rgba(255,255,255,0.5) 0%,rgba(255,255,255,0) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#80ffffff', endColorstr='#00ffffff',GradientType=0 );
+
+}
+#registerForm_hldr,
+#loginForm_hldr {
+    height: 415px;
+    padding-top:10px;
 }
 #loginForm_hldr {
     display:block;
-    margin:10px auto;
-    padding:15px;
-    float:none;
+    width: 300px;
+    padding: 15px 60px;
+    margin: 10px auto;
 }
 #formButton_hldr {
     margin-top:10px;
@@ -31,6 +72,8 @@
     line-height: 40px;
     font-size: 1.3em;
     padding: 2px 15px;
+    border-radius:10px;
+    box-shadow: 0px 1px 0px 1px rgb(100,100,100),0px -1px 0px 1px rgb(100,100,100);
 }
 label {
     font-size:1.2em;
@@ -41,4 +84,10 @@ input[type="text"],
 input[type="email"],
 input[type='password']{
     width:240px;
+    font-size:1.4em;
+}
+#loginForm_hldr input[type="text"],
+#loginForm_hldr input[type="email"],
+#loginForm_hldr input[type='password'] {
+    width:280px
 }
