--- a/app/Resources/FOSUserBundle/views/Registration/register_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Registration/register_content.html.twig
@@ -41,4 +41,8 @@
     </form>
 </div>
 
-<div id='registerHelp_hldr'>holder</div>
+<div id='registerHelp_hldr'>
+    <div id="helpBlurb_pointer"></div>
+    <div id="helpBlurb_hldr">help message</div>
+</div>
+
