--- a/web/public/css/TDC1/qa.css
+++ b/web/public/css/TDC1/qa.css
@@ -9,11 +9,13 @@
 }
 
 .questionTitle, .answerTitle {
-    color:rgb(228, 188, 68);
+    color:rgb(0, 88, 235);
 }
 .questionArea {
     width:665px;
     display:inline-block;
+    min-height:470px;
+    background-color: rgba(255, 255, 255, 0.35);
 }
 
 .questionText, .answerText {
@@ -32,6 +34,7 @@
 .author, .updated, .views {
     float:left;
     margin-right:30px;
+    margin-left:15px;
 }
 .tags {
     margin:5px 0px;
@@ -44,7 +47,7 @@
 span.tag,
 span.addedTag {
     font-size:0.85em;
-    background-color:rgb(50,100,200);
+    background-color:rgb(0,102,255);
     border-radius:5px;
     padding:4px 6px;
     box-shadow: 0px 1px 1px 0px rgb(40,40,40);
@@ -58,10 +61,11 @@ span.addedTag {
     padding:10px;
 }
 .answerArea {
-    margin-left:20px;
+    padding: 4px;
+    background-color:rgb(180,180,180);
+    padding-top:20px;
 }
 .answerTitle {
-    margin-top:20px;
     font-style:italic;
 }
 #paginatorBottom {
@@ -150,7 +154,7 @@ label.error{
     width:250px;
     margin-left:20px;
     display:inline-block;
-    float:right;
+    vertical-align:top;
 }
 
 .newQuestionBtn {
@@ -161,10 +165,12 @@ label.error{
     text-align: center;
     display:block;
     padding:0px;
+    border-radius:10px;
+    box-shadow: 0px 1px 0px 1px rgb(100,100,100),0px -1px 0px 1px rgb(100,100,100);
 }
 
 .tdcButtonDown {
-    box-shadow: inset 0px 2px 9px 0px rgb(20,20,20);
+    box-shadow: 0px 1px 0px 1px rgb(100,100,100),0px -1px 0px 1px rgb(100,100,100), inset 0px 0px 9px 0px rgb(70,70,70);
     border-top: 1px solid #323232 !important;
     border-bottom: 1px solid #C2C2C2;
 }
