--- a/app/Resources/views/TDC1/base.html.twig
+++ b/app/Resources/views/TDC1/base.html.twig
@@ -110,7 +110,8 @@
                 <div id="navBarPre">
                         <div class="fb-like" data-href="http://www.facebook.com/pages/TD-Channel/136759419761676" data-send="false" data-layout="button_count" data-width="90" data-show-faces="false"  data-font="arial"></div>
 
-                        <a href="https://twitter.com/TDChannel" class="twitter-follow-button" data-show-count="false" data-show-screen-name="false">Follow @TDChannel</a>
+                        <a href="https://twitter.com/TDChannel" data-width="100px" class="twitter-follow-button" 
+                            data-show-count="false" data-show-screen-name="false">Follow @TDChannel</a>
                         <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 
                 </div><div id="navBar_hldr">
