--- a/src/tdc/QABundle/Resources/views/Default/answer.html.twig
+++ b/src/tdc/QABundle/Resources/views/Default/answer.html.twig
@@ -23,31 +23,33 @@
     {% endstylesheets %}
 {% endblock %}
 
-{% block body %}
-<h2>Answer Question</h2>
-<form action="{{ path('tdc_qa_answer',{'id':question.id}) }}" method="post" {{ form_enctype(answerForm) }}
-    id="answerForm" novalidate="novalidate" >
-    <table>
-        <tr>
-            <td>{{ form_label(answerForm.title) }}</td>
-            <td > 
-                {{ form_widget(answerForm.title) }}
-                {{ form_errors(answerForm.title) }}
-            </td>
-        </tr>
-        <tr>
-            <td>{{ form_label(answerForm.text) }}</td>
-            <td >
-                {{ form_widget(answerForm.text) }}<br/>
-                {{ form_errors(answerForm.text) }}
-            </td>
-        </tr>
-    </table>
-    {{ form_rest(answerForm) }}
-    <div class="submitBtn"><input type="submit" class="tdcButton" /></div>
-</form>
+{% block qaAction %}:Answer Question{%endblock%}
 
+{% block body %}
     > <a href="{{ path("tdc_qa_homepage")}}">Q & A</a>
+
+    <form action="{{ path('tdc_qa_answer',{'id':question.id}) }}" method="post" {{ form_enctype(answerForm) }}
+        id="answerForm" novalidate="novalidate" >
+        <table>
+            <tr>
+                <td>{{ form_label(answerForm.title) }}</td>
+                <td > 
+                    {{ form_widget(answerForm.title) }}
+                    {{ form_errors(answerForm.title) }}
+                </td>
+            </tr>
+            <tr>
+                <td>{{ form_label(answerForm.text) }}</td>
+                <td >
+                    {{ form_widget(answerForm.text) }}<br/>
+                    {{ form_errors(answerForm.text) }}
+                </td>
+            </tr>
+        </table>
+        {{ form_rest(answerForm) }}
+        <div class="submitBtn"><input type="submit" class="tdcButton" /></div>
+    </form>
+
     <div class="questionArea">
         <div class="questionTitle">{{ question.title|raw }}</div>
         <div class="questionText">{{question.text|raw}}</div>
@@ -80,7 +82,6 @@
         </div>
     </div>
 
-
 {% endblock %}
 
 {% block sidebar %}
@@ -90,9 +91,8 @@
 %}
 {% endblock sidebar %}
 
-{% block javascripts %}
+{% block javascript_post %}
     {{parent()}}
-    <script>
 
     $("#answerForm").validate({
         rules:{
@@ -123,5 +123,4 @@
         }
     });
 
-    </script>
 {% endblock %}
